--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
     name: "Release"
     runs-on: "ubuntu-latest"
     steps:
-      - uses: "marvinpinto/action-automatic-releases@latest"
+      - uses: "actions/create-release@v1"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          release_name: Release ${{ github.run_number}}
+          release_name: "Release ${{ github.run_number}}"
