--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: "ubuntu-latest"
     steps:
       - uses: "actions/create-release@v1"
-        with:
+        env:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        with:
           release_name: "Release ${{ github.run_number}}"
