--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Extract Version from Changelog
       id: extract_version
-      run: echo "::set-output name=version::$(awk '/## \[Version\]/{print $3;exit}' CHANGELOG.md)"
+      run: echo "::set-output name=version::$(awk '/### \[Version\]/{print $3;exit}' CHANGELOG.md)"
 
     - name: Generate Release
       run: |
