--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Extract Version from Changelog
       id: extract_version
-      run: echo "::set-output name=version::$(awk '/### \[Version\]/{print $3;exit}' CHANGELOG.md)"
+      run: echo "{name}={version}::$(awk '/### \[Version\]/{print $3;exit}' CHANGELOG.md)" >> GITHUB_OUTPUT
 
     - name: Generate Release
       run: |
@@ -43,10 +43,10 @@ jobs:
 
         # Create a release with the version
         github-release release \
-          --owner ${{ github.repository_owner }} \
           --repo ${{ github.repository }} \
           --tag $version \
           --name "Release $version" \
-          --body "$changelog"
+          --description "$changelog" 
+
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
