--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,14 +32,14 @@ jobs:
 
     - name: Extract Version from Changelog
       id: extract_version
-      run: echo "name=version::$(awk '/### \[Version\]/{print $3;exit}' CHANGELOG.md)" >> GITHUB_OUTPUT
+      run: echo "version=$(awk '/### /{print $2;exit}' CHANGELOG.md)" >> GITHUB_OUTPUT
 
     - name: Generate Release
       run: |
         version=${{ steps.extract_version.outputs.version }}
 
         # Extract the changelog since the last release
-        changelog=$(sed -n -e "/### \[Version\] $version/,/${{ github.sha }}/p" CHANGELOG.md)
+        changelog=$(sed -n -e "/### $version/,/${{ github.sha }}/p" CHANGELOG.md)
 
         # Create a release with the version
         github-release release \
