--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,17 +32,14 @@ jobs:
 
     - name: Extract Version from Changelog
       id: extract_version
-      run: echo "version=$(awk '/### /{print $2;exit}' CHANGELOG.md)" >> GITHUB_OUTPUT
+      run: echo "{version=$(awk '/### /{print $2;exit}' CHANGELOG.md)}" >> GITHUB_OUTPUT
 
     - name: Generate Release
       run: |
         version=${{ steps.extract_version.outputs.version }}
 
         # Create a release with the version
-        github-release release \
-          --repo ${{ github.repository }} \
-          --tag $version \
-          --name "Release $version" 
+        github-release release --name "Release $version" 
 
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
