--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,31 +12,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+#    - name: Checkout repository
+#      uses: actions/checkout@v2
+#
+#    - name: Set up Node.js
+#      uses: actions/setup-node@v3
+#      with:
+#        node-version: '14'
+#
+#    - name: Install dependencies
+#      run: npm install
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '14'
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Install github-release
-      run: |
-        curl -sSL https://github.com/github-release/github-release/releases/download/v0.10.0/linux-amd64-github-release.bz2 -o github-release.bz2
-        bzip2 -d github-release.bz2
-        chmod +x github-release
-        sudo mv github-release /usr/local/bin/
+#    - name: Install github-release
+#      run: |
+#        curl -sSL https://github.com/github-release/github-release/releases/download/v0.10.0/linux-amd64-github-release.bz2 -o github-release.bz2
+#        bzip2 -d github-release.bz2
+#        chmod +x github-release
+#        sudo mv github-release /usr/local/bin/
 
     - name: Extract Version from Changelog
       id: extract_version
-      run: echo "version::$(awk '/### /{print $2;exit}' CHANGELOG.md)" >> GITHUB_OUTPUT
+      run: echo "version::$(awk '/### /{print $2;exit}' CHANGELOG.md)" #>> GITHUB_OUTPUT
 
-    - name: Generate Release
-      run: |
-        version=${{ steps.extract_version.outputs.version }}
+#    - name: Generate Release
+#      run: |
+#        version=${{ steps.extract_version.outputs.version }}
 
     - name: Print Version
       run: | 
@@ -44,8 +44,8 @@ jobs:
         echo "output ${{ steps.extract_version.outputs}}"
 
 
-        # Create a release with the version
-        github-release release --tag $version --name "Release $version"
+      #Create a release with the version
+      #github-release release --tag $version --name "Release $version"
 
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
