--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,8 @@ jobs:
 
     - name: Extract Version from Changelog
       id: extract_version
-      run: echo "version::$(awk '/### /{print $2;exit}' CHANGELOG.md)" #>> GITHUB_OUTPUT
+      env:
+        version: echo "$(awk '/### /{print $2;exit}' CHANGELOG.md)" #>> GITHUB_OUTPUT
 
 #    - name: Generate Release
 #      run: |
@@ -42,6 +43,7 @@ jobs:
       run: | 
         echo "Version is ${{ steps.extract_version.outputs.version }}"
         echo "output ${{ steps.extract_version.outputs}}"
+        echo "Version var: $version"
 
 
       #Create a release with the version
