--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Extract Version from Changelog
 #      id: extract_version
-      run: echo "version=$(awk '/### /{print $2;exit}' ../../CHANGELOG.md)" >> $GITHUB_ENV
+      run: echo "version=$(awk '/### /{print $2;exit}' CHANGELOG.md)" >> $GITHUB_ENV
 
 
 #      run: |
