--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,9 @@ jobs:
 
     steps:
       # ...
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
       - name: "Build & test"
         run: |
           echo "done!"
