--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,9 +34,8 @@ jobs:
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          title: $version
+          title: "${{ version}}"
           prerelease: false
           files: |
             plugin_manager.py
-          automatic_release_tag: "latest"
 #
