--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,15 +26,11 @@ jobs:
         run: |
           echo "version=$(awk '/### /{print $2;exit}' CHANGELOG.md)" >> $GITHUB_ENV
 
-      - name: Print version
-        run: |
-          echo $version
-          echo "v$version"
-
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          title: $version
+          title: "$(echo $version)"
+          automatic_release_tag: "Latest"
           prerelease: false
           files: |
             plugin_manager.py
