--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,8 +29,8 @@ jobs:
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          title: "$(echo $version)"
-          automatic_release_tag: "Latest"
+          title: "${{ version}}"
+          automatic_release_tag: ""
           prerelease: false
           files: |
             plugin_manager.py
