--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,8 +33,8 @@ jobs:
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          title: "${{ steps.set_version.outputs.version }}"
-          automatic_release_tag: ""
+          title: "v${{ steps.set_version.outputs.version }}"
+          automatic_release_tag: "Latest"
           prerelease: false
           files: |
             plugin_manager.py
