--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           title: "v${{ steps.set_version.outputs.version }}"
-          automatic_release_tag: "Latest"
+          automatic_release_tag: "v${{ steps.set_version.outputs.version }}"
           prerelease: false
           files: |
             plugin_manager.py
